panel z-index fix #2

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1068,7 +1068,7 @@ h1,h2,h3,h4,p,ul {
       height: 80px;
       
       @media @mobiles {
-        height: 80px;
+        height: 300px;
       }
       .slider__title {
         font-size: 25px;
@@ -1151,6 +1151,10 @@ h1,h2,h3,h4,p,ul {
       display: block;
     }
     &--open {
+      display: none;
+    }
+
+    @media @mobiles {
       display: none;
     }
   }
@@ -3344,7 +3348,7 @@ h1,h2,h3,h4,p,ul {
 }
 
 .slideout-menu {
-  z-index: 1;
+  z-index: -1;
 }
 
 
